# DRF_CRUD

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
CRUD/: models.py  serializer.py  tests.py  urls.py  views.py
CRUD/migrations/: 0001_initial.py
DRF_CRUD/: asgi.py  settings.py  urls.py  wsgi.py
